<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location" />
    <CheckBox android:id="@+id/checkbox_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_pay"
        android:onClick="onCheckboxClicked"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/button_send" 
        android:onClick="sendMessage" />
    
    
    <fragment
    android:name="com.google.android.gms.maps.MapFragment"
    android:id="@+id/map2"
    android:layout_width="match_parent"
    android:layout_height="300dp"/>

    
</LinearLayout>